syntax = "proto3";
// option java_multiple_files = true;
option java_package = "com.game.proto";
option java_outer_classname = "Message";

enum Result
{
	Success = 0;
	Failed = 1;
}

message NetMessageRequest2{
  int32 userId = 1;  //用户id
  FrameHandle frameHandle = 2;
  PercentForward percentForward = 3;
  GameOverRequest gameOverReq =4;
  RepairFrameRequest repairFrameReq =5;
}

message NetMessageResponse2{
   FrameHandleResponse frameHandleRes = 1;
   PercentForwardResponse percentForwardRes = 2;
   RepairFrameResponse repairFrameRes = 3;
   LiveFrameResponse liveFrameRes = 4;
}

//帧操作请求
message FrameHandle{
   int32 userId = 1;  //用户id
   int32 opt = 2;  //操作1
   int32 optValue1 = 4; //值1
   int32 optValue2 = 5; //值2
   int32 optValue3 = 6; //值3
   int32 optValue4 = 7; //值4
}
//帧操作响应
message FrameHandleResponse{
   int32 frame = 1;  //帧号
   repeated FrameHandle frameHandles = 2;  //用户帧操作集合
}


//进度转发请求
message PercentForward{
   int32 userId = 1;  //用户id
   int32 percent = 2;  //百分比
}

//进度转发响应
message PercentForwardResponse{
   PercentForward percentForward = 1;  //进度
   bool allUserLoadSucess = 2;   //全部用户是否加载成功
}

//游戏结束请求
message GameOverRequest{

}

//补帧请求
message RepairFrameRequest{
   int32 startFrame = 1;  //起始帧
   int32 endFrame = 2;  //结束帧  -1获取全部帧
}
//补帧响应
message RepairFrameResponse{
   repeated RepairFrame repairFrames = 1;
}
//补帧结构体
message RepairFrame{
   int32 frame = 1;  //帧号
   repeated FrameHandle frameHandles = 2;  //用户帧操作集合
}

//直播帧响应
message LiveFrameResponse{
   repeated RepairFrame liveFrames = 1;
}

